--- a/index.html
+++ b/index.html
@@ -11,6 +11,68 @@
     <!-- Compiled CSS File -->
   </head>
   <body>
+    <header class="nav"></header>
+
+    <navbar
+      class="nav-bottom-mb navbar-light bg-nav fixed-bottom p-3 shadow-lg"
+    >
+      <div class="container-fluid d-flex justify-content-between">
+        <span class="text-start"> Patrick Prakash</span>
+        <box-icon name="grid-alt" class=""></box-icon>
+      </div>
+    </navbar>
+
+    <div
+      class="offcanvas.show offcanvas-bottom"
+      tabindex="-1"
+      id="offcanvas"
+      aria-labelledby="offcanvasLabel"
+    >
+      <div class="offcanvas-header"></div>
+      <div class="offcanvas-body">
+        <div class="container">
+          <div class="row py-1">
+            <div class="col-4 d-flex flex-column align-items-center">
+              <box-icon name="home"></box-icon>
+              <p >Home</p>
+            </div>
+            <div class="col-4 d-flex flex-column align-items-center">
+              <box-icon name="user" color='#b2b2b2'></box-icon>
+              <p class="text-black-50">Profile</p>
+            </div>
+            <div class="col-4 d-flex flex-column align-items-center">
+              <box-icon name="book" color='#b2b2b2'></box-icon>
+              <p class="text-black-50">Education</p>
+          </div>
+        </div>
+        <div class="row py-1">
+          <div class="col-4 d-flex flex-column align-items-center">
+            <box-icon name='notepad' color='#b2b2b2'></box-icon>
+            <p class="text-black-50">Skills</p>
+          </div>
+          <div class="col-4 d-flex flex-column align-items-center">
+            <box-icon name='briefcase' color='#b2b2b2'></box-icon>
+            <p class="text-black-50">Experience</p>
+          </div>
+          <div class="col-4 d-flex flex-column align-items-center">
+            <box-icon name='medal' color='#b2b2b2'></box-icon>
+            <p class="text-black-50">Certificates</p>
+          </div>
+        </div>
+
+        <div class="row py-1">
+          <div class="col-4 d-flex flex-column align-items-center">
+            <box-icon name='link-external' color='#b2b2b2' class="align-items-center"></box-icon>
+            <p class="align-items-center text-black-50">References</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- The box icons component -->
+    <script src="https://unpkg.com/boxicons@2.0.9/dist/boxicons.js"></script>
+    <!-- The box icons component -->
+
     <!-- The bootstrap bundle -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
