Added the extra files

--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
     <!-- Compiled CSS File -->
     <link rel="stylesheet" href="assets/css/style.css" />
     <!-- Compiled CSS File -->
+    
   </head>
   <body>
     <header class="nav"></header>
 
-    <navbar
+    <div class="bottom-nav">
+      <navbar
       class="nav-bottom-mb navbar-light bg-nav fixed-bottom p-3 shadow-lg"
     >
       <div class="container-fluid d-flex justify-content-between">
@@ -40,7 +42,7 @@
               <box-icon name="user" color='#b2b2b2'></box-icon>
               <p class="text-black-50">Profile</p>
             </div>
-            <div class="col-4 d-flex flex-column align-items-center">
+            <div class="col-4 d-flex flex-column align-items-center nav-button-active">
               <box-icon name="book" color='#b2b2b2'></box-icon>
               <p class="text-black-50">Education</p>
           </div>
@@ -69,6 +71,8 @@
       </div>
     </div>
 
+    </div>
+    
     <!-- The box icons component -->
     <script src="https://unpkg.com/boxicons@2.0.9/dist/boxicons.js"></script>
     <!-- The box icons component -->
