--- a/index.html
+++ b/index.html
@@ -9,70 +9,100 @@
     <!-- Compiled CSS File -->
     <link rel="stylesheet" href="assets/css/style.css" />
     <!-- Compiled CSS File -->
-    
   </head>
   <body>
-    <header class="nav"></header>
+    <div class="container-fluid">
+      <div class="resume container-s container-xl container-xxl bg-primary">
+        <!-- Navigation-Desktop -->
+
+        <header class="resume-left-section">
+          <p>Hello</p>
+        </header>
+
+        <main class="resume-main-section"></main>
+
+        <!-- Navigation-Desktop -->
+      </div>
+    </div>
+    <!-- Resume Container -->
+
+    <!-- Resume Container -->
+
+    <!-- Navigation-Mobile -->
 
     <div class="bottom-nav">
       <navbar
-      class="nav-bottom-mb navbar-light bg-nav fixed-bottom p-3 shadow-lg"
-    >
-      <div class="container-fluid d-flex justify-content-between">
-        <span class="text-start"> Patrick Prakash</span>
-        <box-icon name="grid-alt" class=""></box-icon>
-      </div>
-    </navbar>
-
-    <div
-      class="offcanvas.show offcanvas-bottom"
-      tabindex="-1"
-      id="offcanvas"
-      aria-labelledby="offcanvasLabel"
-    >
-      <div class="offcanvas-header"></div>
-      <div class="offcanvas-body">
-        <div class="container">
-          <div class="row py-1">
-            <div class="col-4 d-flex flex-column align-items-center">
-              <box-icon name="home"></box-icon>
-              <p >Home</p>
-            </div>
-            <div class="col-4 d-flex flex-column align-items-center">
-              <box-icon name="user" color='#b2b2b2'></box-icon>
-              <p class="text-black-50">Profile</p>
-            </div>
-            <div class="col-4 d-flex flex-column align-items-center nav-button-active">
-              <box-icon name="book" color='#b2b2b2'></box-icon>
-              <p class="text-black-50">Education</p>
-          </div>
+        class="nav-bottom-mb navbar-light bg-nav fixed-bottom p-3 shadow-lg"
+      >
+        <div class="container-fluid d-flex justify-content-between">
+          <span class="text-start"> Patrick Prakash</span>
+          <box-icon name="grid-alt" class=""></box-icon>
         </div>
-        <div class="row py-1">
-          <div class="col-4 d-flex flex-column align-items-center">
-            <box-icon name='notepad' color='#b2b2b2'></box-icon>
-            <p class="text-black-50">Skills</p>
-          </div>
-          <div class="col-4 d-flex flex-column align-items-center">
-            <box-icon name='briefcase' color='#b2b2b2'></box-icon>
-            <p class="text-black-50">Experience</p>
-          </div>
-          <div class="col-4 d-flex flex-column align-items-center">
-            <box-icon name='medal' color='#b2b2b2'></box-icon>
-            <p class="text-black-50">Certificates</p>
-          </div>
-        </div>
+      </navbar>
 
-        <div class="row py-1">
-          <div class="col-4 d-flex flex-column align-items-center">
-            <box-icon name='link-external' color='#b2b2b2' class="align-items-center"></box-icon>
-            <p class="align-items-center text-black-50">References</p>
+      <div
+        class="offcanvas.show offcanvas-bottom"
+        tabindex="-1"
+        id="offcanvas"
+        aria-labelledby="offcanvasLabel"
+      >
+        <div class="offcanvas-header"></div>
+        <div class="offcanvas-body">
+          <div class="container">
+            <div class="row py-1">
+              <div class="col-4 d-flex flex-column align-items-center">
+                <box-icon name="home"></box-icon>
+                <p>Home</p>
+              </div>
+              <div class="col-4 d-flex flex-column align-items-center">
+                <box-icon name="user" color="#b2b2b2"></box-icon>
+                <p class="text-black-50">Profile</p>
+              </div>
+              <div
+                class="
+                  col-4
+                  d-flex
+                  flex-column
+                  align-items-center
+                  nav-button-active
+                "
+              >
+                <box-icon name="book" color="#b2b2b2"></box-icon>
+                <p class="text-black-50">Education</p>
+              </div>
+            </div>
+            <div class="row py-1">
+              <div class="col-4 d-flex flex-column align-items-center">
+                <box-icon name="notepad" color="#b2b2b2"></box-icon>
+                <p class="text-black-50">Skills</p>
+              </div>
+              <div class="col-4 d-flex flex-column align-items-center">
+                <box-icon name="briefcase" color="#b2b2b2"></box-icon>
+                <p class="text-black-50">Experience</p>
+              </div>
+              <div class="col-4 d-flex flex-column align-items-center">
+                <box-icon name="medal" color="#b2b2b2"></box-icon>
+                <p class="text-black-50">Certificates</p>
+              </div>
+            </div>
+
+            <div class="row py-1">
+              <div class="col-4 d-flex flex-column align-items-center">
+                <box-icon
+                  name="link-external"
+                  color="#b2b2b2"
+                  class="align-items-center"
+                ></box-icon>
+                <p class="align-items-center text-black-50">References</p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </div>
 
-    </div>
-    
+    <!-- Navigation-Mobile -->
+
     <!-- The box icons component -->
     <script src="https://unpkg.com/boxicons@2.0.9/dist/boxicons.js"></script>
     <!-- The box icons component -->
