Some new changes

--- a/index.html
+++ b/index.html
@@ -12,14 +12,24 @@
   </head>
   <body>
     <div class="container-fluid">
-      <div class="resume container-s container-xl container-xxl bg-primary">
+      <div
+        class="
+          resume
+          container-xl container-xxl
+          shadow
+          d-flex
+          align-items-stretch
+        "
+      >
         <!-- Navigation-Desktop -->
 
-        <header class="resume-left-section">
+        <header class="resume-left-section bg-primary">
           <p>Hello</p>
         </header>
 
-        <main class="resume-main-section"></main>
+        <main class="resume-main-section bg-secondary flex-grow-1">
+          <p>Hello</p>
+        </main>
 
         <!-- Navigation-Desktop -->
       </div>
