--- a/index.html
+++ b/index.html
@@ -16,89 +16,151 @@
       <!-- ===== Resume Container Desktop ===== -->
       <div class="resume-container__desktop">
         <!-- ===== Resume Desktop Nav Section ===== -->
-        <div class="resume-container__desktop__nav">
-
-        </div>
+        <div class="resume-container__desktop__nav"></div>
         <!-- End Resume Desktop Nav Section -->
 
         <!-- ===== Resume Desktop Main Section ===== -->
-        <div class="resume-container__desktop__main">
-
-        </div>
+        <div class="resume-container__desktop__main"></div>
         <!-- End Resume Desktop Main Section -->
       </div>
       <!-- End Resume Container Desktop -->
-      <div class="resume-container__mobile"></div>
+
       <!-- Resume Container Mobile -->
-      <div class="mobile-resume-container"></div>
-      <!-- End Resume Container Mobile -->
-    </div>
-    <!-- End Resume Container -->
+      <div class="resume-container__mobile container-fluid">
+        <div class="resume-container__mobile__main">
+          <section class="home">
+            <div class="home__upper row justify-content-between">
+              <box-icon name="download" class="m-3 col-1 home-icons"></box-icon>
+              <div class="home_upper_profile col-5">
+                <img
+                  src="./assets/imgs/njan.jpg"
+                  class="njan-profile-pic rounded-circle"
+                  alt=""
+                />
 
-    <!-- ===== Mobile Nav Bar====== -->
-    <div class="mobile-nav">
-      <navbar
-        class="nav-bottom-mb navbar-light bg-nav fixed-bottom p-3 shadow-lg"
-      >
-        <div class="container-fluid d-flex justify-content-between">
-          <span class="text-start"> Patrick Prakash</span>
-          <box-icon name="grid-alt" class=""></box-icon>
+                <p class="">Patrick Prakash</p>
+                <p class="">Softwarer Engineer</p>
+
+                <button>Download</button>
+              </div>
+
+              <box-icon name="moon" class="m-3 col-1 home-icons"></box-icon>
+            </div>
+            <div class="home__bottom">
+              <div class="home_bottom_address">
+                <div class="home__bottom__info">
+                  <div
+                    class="
+                      home__bottom__info__address
+                      d-flex
+                      align-items-center
+                    "
+                  >
+                    <box-icon name="map"></box-icon>
+                    <span>Rose Villa, Chathamanagalam, Kozhikode</span>
+                  </div>
+                  <div
+                    class="home__bottom__info__email d-flex align-items-center"
+                  >
+                    <box-icon name="message-dots"></box-icon>
+                    <span>patrickprakash8@gmail.com</span>
+                  </div>
+                  <div
+                    class="home__bottom__info__phone d-flex align-items-center"
+                  >
+                    <box-icon name="phone"></box-icon>
+                    <span>+91-8129920068</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </section>
+          <section class="profile"></section>
+          <section class="education"></section>
+          <section class="skills"></section>
+          <section class="experience"></section>
+          <section class="certificates"></section>
+          <section class="references"></section>
         </div>
-      </navbar>
 
-      <div
-        class="offcanvas.show offcanvas-bottom"
-        tabindex="-1"
-        id="offcanvas"
-        aria-labelledby="offcanvasLabel"
-      >
-        <div class="offcanvas-header"></div>
-        <div class="offcanvas-body">
-          <div class="container">
-            <div class="row py-1">
-              <div class="col-4 d-flex flex-column align-items-center">
-                <box-icon name="home"></box-icon>
-                <p>Home</p>
+        <div class="resume-container__mobile__nav">
+          <!-- ===== Mobile Nav Bar====== -->
+          <div class="mobile-nav">
+            <navbar
+              class="
+                nav-bottom-mb
+                navbar-light
+                bg-nav
+                fixed-bottom
+                p-3
+                shadow-lg
+              "
+            >
+              <div class="container-fluid d-flex justify-content-between">
+                <span class="text-start"> Patrick Prakash</span>
+                <box-icon name="grid-alt" class=""></box-icon>
               </div>
-              <div class="col-4 d-flex flex-column align-items-center">
-                <box-icon name="user" color="#b2b2b2"></box-icon>
-                <p class="text-black-50">Profile</p>
-              </div>
-              <div class="col-4 d-flex flex-column align-items-center">
-                <box-icon name="book" color="#b2b2b2"></box-icon>
-                <p class="text-black-50">Education</p>
-              </div>
-            </div>
-            <div class="row py-1">
-              <div class="col-4 d-flex flex-column align-items-center">
-                <box-icon name="notepad" color="#b2b2b2"></box-icon>
-                <p class="text-black-50">Skills</p>
-              </div>
-              <div class="col-4 d-flex flex-column align-items-center">
-                <box-icon name="briefcase" color="#b2b2b2"></box-icon>
-                <p class="text-black-50">Experience</p>
-              </div>
-              <div class="col-4 d-flex flex-column align-items-center">
-                <box-icon name="medal" color="#b2b2b2"></box-icon>
-                <p class="text-black-50">Certificates</p>
-              </div>
-            </div>
+            </navbar>
 
-            <div class="row py-1">
-              <div class="col-4 d-flex flex-column align-items-center">
-                <box-icon
-                  name="link-external"
-                  color="#b2b2b2"
-                  class="align-items-center"
-                ></box-icon>
-                <p class="align-items-center text-black-50">References</p>
+            <div
+              class="offcanvas.show offcanvas-bottom"
+              tabindex="-1"
+              id="offcanvas"
+              aria-labelledby="offcanvasLabel"
+            >
+              <div class="offcanvas-header"></div>
+              <div class="offcanvas-body">
+                <div class="container">
+                  <div class="row py-1">
+                    <div class="col-4 d-flex flex-column align-items-center">
+                      <box-icon name="home"></box-icon>
+                      <p>Home</p>
+                    </div>
+                    <div class="col-4 d-flex flex-column align-items-center">
+                      <box-icon name="user" color="#b2b2b2"></box-icon>
+                      <p class="text-black-50">Profile</p>
+                    </div>
+                    <div class="col-4 d-flex flex-column align-items-center">
+                      <box-icon name="book" color="#b2b2b2"></box-icon>
+                      <p class="text-black-50">Education</p>
+                    </div>
+                  </div>
+                  <div class="row py-1">
+                    <div class="col-4 d-flex flex-column align-items-center">
+                      <box-icon name="notepad" color="#b2b2b2"></box-icon>
+                      <p class="text-black-50">Skills</p>
+                    </div>
+                    <div class="col-4 d-flex flex-column align-items-center">
+                      <box-icon name="briefcase" color="#b2b2b2"></box-icon>
+                      <p class="text-black-50">Experience</p>
+                    </div>
+                    <div class="col-4 d-flex flex-column align-items-center">
+                      <box-icon name="medal" color="#b2b2b2"></box-icon>
+                      <p class="text-black-50">Certificates</p>
+                    </div>
+                  </div>
+
+                  <div class="row py-1">
+                    <div class="col-4 d-flex flex-column align-items-center">
+                      <box-icon
+                        name="link-external"
+                        color="#b2b2b2"
+                        class="align-items-center"
+                      ></box-icon>
+                      <p class="align-items-center text-black-50">References</p>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
+          <!-- End Mobile Nav Bar -->
         </div>
       </div>
+
+      <!-- End Resume Container Mobile -->
     </div>
-    <!-- End Mobile Nav Bar -->
+    <!-- End Resume Container -->
 
     <!-- The box icons component -->
     <script src="https://unpkg.com/boxicons@2.0.9/dist/boxicons.js"></script>
