Added the dummy content and bootstrap of home and education sections

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       <!-- Resume Container Mobile -->
       <div class="resume-container__mobile container-fluid">
         <div class="resume-container__mobile__main">
+          <!-- ===== Home section ===== -->
           <section class="home">
             <div class="home__upper row justify-content-between">
               <box-icon name="download" class="m-3 col-1 home-icons"></box-icon>
@@ -47,36 +48,73 @@
               <box-icon name="moon" class="m-3 col-1 home-icons"></box-icon>
             </div>
             <div class="home__bottom">
-              <div class="home_bottom_address">
-                <div class="home__bottom__info">
-                  <div
-                    class="
-                      home__bottom__info__address
-                      d-flex
-                      align-items-center
-                    "
-                  >
-                    <box-icon name="map"></box-icon>
-                    <span>Rose Villa, Chathamanagalam, Kozhikode</span>
+              <div class="home__bottom__info">
+                <div
+                  class="home__bottom__info__address d-flex align-items-center"
+                >
+                  <box-icon name="map"></box-icon>
+                  <span>Rose Villa, Chathamanagalam, Kozhikode</span>
+                </div>
+                <div
+                  class="home__bottom__info__email d-flex align-items-center"
+                >
+                  <box-icon name="message-dots"></box-icon>
+                  <span>patrickprakash8@gmail.com</span>
+                </div>
+                <div
+                  class="home__bottom__info__phone d-flex align-items-center"
+                >
+                  <box-icon name="phone"></box-icon>
+                  <span>+91-8129920068</span>
+                </div>
+              </div>
+              <div class="home__bottom__social">
+                <p class="d-flex justify-content-center ">Social</p>
+                <div class="home__bottom__social__items">
+                  <div class="home__bottom__social__item__twitter d-flex align-items-middle">
+                    <box-icon type='logo' name='twitter'></box-icon>
+                    <p>thisispatts</p>
                   </div>
-                  <div
-                    class="home__bottom__info__email d-flex align-items-center"
-                  >
-                    <box-icon name="message-dots"></box-icon>
-                    <span>patrickprakash8@gmail.com</span>
-                  </div>
-                  <div
-                    class="home__bottom__info__phone d-flex align-items-center"
-                  >
-                    <box-icon name="phone"></box-icon>
-                    <span>+91-8129920068</span>
-                  </div>
+                  <div class="home__bottom__social__item__linkedln d-flex align-items-middle">
+                      <box-icon type='logo' name='linkedin-square'></box-icon>
+                    <p>patrickprakash</p>
+                </div>
+                <div class="home__bottom__social__item__instagram d-flex align-items-middle">
+                  <box-icon type='logo' name='instagram'></box-icon>
+                  <p>patrickprakash</p>
                 </div>
               </div>
             </div>
           </section>
-          <section class="profile"></section>
-          <section class="education"></section>
+          <!-- End Home Section -->
+          <!-- ===== Profile Section ===== -->
+          <section class="profile">
+            <p class="d-flex justify-content-center">Profile</p>
+
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis corporis quam odit blanditiis sit eveniet suscipit impedit voluptatum eaque repudiandae.</p>
+
+          </section>
+          <!-- End Profile Section -->
+          <!-- ===== Education Section ===== -->
+          <section class="education">
+            <p class="d-flex justify-content-center">Education</p>
+            <div class="education__card__bachelors">
+              <p class="degree">Bachelors of Technology</p>
+              <p>College</p>
+              <p>2018- 2021</p>
+            </div>
+            <div class="education__card__diploma">
+              <p class="degree">Bachelors of Technology</p>
+              <p>College</p>
+              <p>2018- 2021</p>
+            </div>
+            <div class="education__card__x">
+              <p class="degree">Bachelors of Technology</p>
+              <p>College</p>
+              <p>2018- 2021</p>
+            </div>
+          </section>
+          <!-- End Education Section -->
           <section class="skills"></section>
           <section class="experience"></section>
           <section class="certificates"></section>
