Added the some boilerplate html code

--- a/index.html
+++ b/index.html
@@ -115,10 +115,26 @@
             </div>
           </section>
           <!-- End Education Section -->
-          <section class="skills"></section>
-          <section class="experience"></section>
-          <section class="certificates"></section>
-          <section class="references"></section>
+          <!-- ===== Skills Section ===== -->
+          <section class="skills">
+            
+          </section>
+          <!-- End Skills Section -->
+          <!-- ===== Experience Section ===== -->
+          <section class="experience">
+
+          </section>
+          <!-- End Experience Section -->
+          <!-- ===== Certificates Section ===== -->
+          <section class="certificates">
+
+          </section>
+          <!-- End Certificates Section -->
+          <!-- ===== Reference Section ===== -->
+          <section class="references">
+
+          </section>
+          <!-- End Reference Section -->
         </div>
 
         <div class="resume-container__mobile__nav">
