--- a/index.html
+++ b/index.html
@@ -4,11 +4,20 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bootstrap-Portfolio</title>
+    <title>Patrick Prakash - Dev</title>
 
     <!-- Compiled CSS File -->
     <link rel="stylesheet" href="assets/css/style.css" />
     <!-- Compiled CSS File -->
+
+    <link rel="icon" href="assets/imgs/code-solid.svg" />
+
+    <!-- Open Graph Tags -->
+    <meta property="og:title" content="Patrick Prakash - A Software Engineer" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="assets/imgs/dev-image.jpg" />
+    <meta property="og:url" content="https://www.patts.live" />
+    <!-- Open Graph Tags -->
   </head>
   <body>
     <!-- ===== Resume Container ===== -->
@@ -27,116 +36,146 @@
 
       <!-- Resume Container Mobile -->
       <div class="resume-container__mobile container-fluid">
-        <div class="resume-container__mobile__main">
-          <!-- ===== Home section ===== -->
-          <section class="home">
-            <div class="home__upper row justify-content-between">
-              <box-icon name="download" class="m-3 col-1 home-icons"></box-icon>
-              <div class="home_upper_profile col-5">
-                <img
-                  src="./assets/imgs/njan.jpg"
-                  class="njan-profile-pic rounded-circle"
-                  alt=""
-                />
+        <!-- ===== Home section ===== -->
+        <section class="home">
+          <div class="home__upper row justify-content-between">
+            <box-icon name="download" class="m-3 col-1 home-icons"></box-icon>
+            <div class="home_upper_profile col-5">
+              <img
+                src="./assets/imgs/njan.jpg"
+                class="njan-profile-pic rounded-circle"
+                alt=""
+              />
 
-                <p class="">Patrick Prakash</p>
-                <p class="">Softwarer Engineer</p>
+              <p class="">Patrick Prakash</p>
+              <p class="">Softwarer Engineer</p>
 
-                <button>Download</button>
-              </div>
-
-              <box-icon name="moon" class="m-3 col-1 home-icons"></box-icon>
+              <button>Download</button>
             </div>
-            <div class="home__bottom">
-              <div class="home__bottom__info">
-                <div
-                  class="home__bottom__info__address d-flex align-items-center"
-                >
-                  <box-icon name="map"></box-icon>
-                  <span>Rose Villa, Chathamanagalam, Kozhikode</span>
-                </div>
-                <div
-                  class="home__bottom__info__email d-flex align-items-center"
-                >
-                  <box-icon name="message-dots"></box-icon>
-                  <span>patrickprakash8@gmail.com</span>
-                </div>
-                <div
-                  class="home__bottom__info__phone d-flex align-items-center"
-                >
-                  <box-icon name="phone"></box-icon>
-                  <span>+91-8129920068</span>
-                </div>
+
+            <box-icon name="moon" class="m-3 col-1 home-icons"></box-icon>
+          </div>
+          <div class="home__bottom">
+            <div class="home__bottom__info">
+              <div
+                class="home__bottom__info__address d-flex align-items-center"
+              >
+                <box-icon name="map"></box-icon>
+                <span>Rose Villa, Chathamanagalam, Kozhikode</span>
               </div>
-              <div class="home__bottom__social">
-                <p class="d-flex justify-content-center ">Social</p>
-                <div class="home__bottom__social__items">
-                  <div class="home__bottom__social__item__twitter d-flex align-items-middle">
-                    <box-icon type='logo' name='twitter'></box-icon>
-                    <p>thisispatts</p>
-                  </div>
-                  <div class="home__bottom__social__item__linkedln d-flex align-items-middle">
-                      <box-icon type='logo' name='linkedin-square'></box-icon>
-                    <p>patrickprakash</p>
+              <div class="home__bottom__info__email d-flex align-items-center">
+                <box-icon name="message-dots"></box-icon>
+                <span>patrickprakash8@gmail.com</span>
+              </div>
+              <div class="home__bottom__info__phone d-flex align-items-center">
+                <box-icon name="phone"></box-icon>
+                <span>+91-8129920068</span>
+              </div>
+            </div>
+            <div class="home__bottom__social">
+              <p class="d-flex justify-content-center">Social</p>
+              <div class="home__bottom__social__items">
+                <div
+                  class="
+                    home__bottom__social__item__twitter
+                    d-flex
+                    align-items-middle
+                  "
+                >
+                  <box-icon type="logo" name="twitter"></box-icon>
+                  <p>thisispatts</p>
                 </div>
-                <div class="home__bottom__social__item__instagram d-flex align-items-middle">
-                  <box-icon type='logo' name='instagram'></box-icon>
+                <div
+                  class="
+                    home__bottom__social__item__linkedln
+                    d-flex
+                    align-items-middle
+                  "
+                >
+                  <box-icon type="logo" name="linkedin-square"></box-icon>
+                  <p>patrickprakash</p>
+                </div>
+                <div
+                  class="
+                    home__bottom__social__item__instagram
+                    d-flex
+                    align-items-middle
+                  "
+                >
+                  <box-icon type="logo" name="instagram"></box-icon>
                   <p>patrickprakash</p>
                 </div>
               </div>
             </div>
-          </section>
-          <!-- End Home Section -->
-          <!-- ===== Profile Section ===== -->
-          <section class="profile">
-            <p class="d-flex justify-content-center">Profile</p>
+          </div>
+        </section>
+        <!-- End Home Section -->
+        <!-- ===== Profile Section ===== -->
+        <section class="profile">
+          <p class="d-flex justify-content-center">Profile</p>
 
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis corporis quam odit blanditiis sit eveniet suscipit impedit voluptatum eaque repudiandae.</p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis
+            corporis quam odit blanditiis sit eveniet suscipit impedit
+            voluptatum eaque repudiandae.
+          </p>
+        </section>
+        <!-- End Profile Section -->
+        <!-- ===== Education Section ===== -->
+        <section class="education">
+          <p class="d-flex justify-content-center">Education</p>
 
-          </section>
-          <!-- End Profile Section -->
-          <!-- ===== Education Section ===== -->
-          <section class="education">
-            <p class="d-flex justify-content-center">Education</p>
+          <div class="education__cards d-flex flex-column align-items-center">
             <div class="education__card__bachelors">
               <p class="degree">Bachelors of Technology</p>
               <p>College</p>
-              <p>2018- 2021</p>
+              <p class="year">2018- 2021</p>
             </div>
             <div class="education__card__diploma">
               <p class="degree">Bachelors of Technology</p>
               <p>College</p>
-              <p>2018- 2021</p>
+              <p class="year">2018- 2021</p>
             </div>
             <div class="education__card__x">
               <p class="degree">Bachelors of Technology</p>
               <p>College</p>
-              <p>2018- 2021</p>
+              <p class="year">2018- 2021</p>
             </div>
-          </section>
-          <!-- End Education Section -->
-          <!-- ===== Skills Section ===== -->
-          <section class="skills">
-            
-          </section>
-          <!-- End Skills Section -->
-          <!-- ===== Experience Section ===== -->
-          <section class="experience">
-
-          </section>
-          <!-- End Experience Section -->
-          <!-- ===== Certificates Section ===== -->
-          <section class="certificates">
-
-          </section>
-          <!-- End Certificates Section -->
-          <!-- ===== Reference Section ===== -->
-          <section class="references">
-
-          </section>
-          <!-- End Reference Section -->
-        </div>
-
+          </div>
+        </section>
+        <!-- End Education Section -->
+        <!-- ===== Skills Section ===== -->
+        <section class="skills">
+          <p class="d-flex justify-content-center">Skills</p>
+          <div class="skills__list row">
+            <div class="skills__list__left col">
+              <ul>
+                <li class="skills__list__item">HTML</li>
+                <li class="skills__list__item">Sass</li>
+                <li class="skills__list__item">Android</li>
+                <li class="skills__list__item">Java</li>
+              </ul>
+            </div>
+            <div class="skills__list__right col">
+              <ul>
+                <li class="skills__list__item">Javascript</li>
+                <li class="skills__list__item">Deep Learning</li>
+                <li class="skills__list__item">Devops</li>
+                <li class="skills__list__item">Googling</li>
+              </ul>
+            </div>
+          </div>
+        </section>
+        <!-- End Skills Section -->
+        <!-- ===== Experience Section ===== -->
+        <section class="experience"></section>
+        <!-- End Experience Section -->
+        <!-- ===== Certificates Section ===== -->
+        <section class="certificates"></section>
+        <!-- End Certificates Section -->
+        <!-- ===== Reference Section ===== -->
+        <section class="references"></section>
+        <!-- End Reference Section -->
         <div class="resume-container__mobile__nav">
           <!-- ===== Mobile Nav Bar====== -->
           <div class="mobile-nav">
@@ -211,7 +250,6 @@
           <!-- End Mobile Nav Bar -->
         </div>
       </div>
-
       <!-- End Resume Container Mobile -->
     </div>
     <!-- End Resume Container -->
