Updated the open graph tag

--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
     <!-- Open Graph Tags -->
     <meta property="og:title" content="Patrick Prakash - A Software Engineer" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="assets/imgs/dev-image.jpg" />
+    <meta
+      property="og:image"
+      content="https://www.simplilearn.com/ice9/free_resources_article_thumb/how_to_become_a_software_engineer.jpg"
+    />
     <meta property="og:url" content="https://www.patts.live" />
     <!-- Open Graph Tags -->
   </head>
