--- a/index.html
+++ b/index.html
@@ -315,11 +315,7 @@
                   data-bs-target="#offcanvas"
                   aria-controls="offcanvas"
                 >
-                  <box-icon
-                    name="grid-alt"
-                    data-bs-toggle="offcanvas"
-                    class=""
-                  ></box-icon>
+                  <box-icon name="grid-alt"></box-icon>
                 </button>
               </div>
             </navbar>
@@ -396,6 +392,11 @@
     ></script> -->
     <!-- The bootstrap bundle -->
 
-    <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <!-- <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script> -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
