--- a/index.html
+++ b/index.html
@@ -38,10 +38,14 @@
       <!-- End Resume Container Desktop -->
 
       <!-- Resume Container Mobile -->
-      <div class="resume-container__mobile container-fluid">
+      <div
+        class="resume-container__mobile container-fluid"
+        data-bs-spy="scroll"
+        data-bs-target="#nav-mb-offcanvas"
+      >
         <div class="resume-container__mobile__main">
           <!-- ===== Home section ===== -->
-          <section class="home">
+          <section id="home" class="home">
             <div class="home__upper row justify-content-between">
               <box-icon name="download" class="m-3 col-1 home-icons"></box-icon>
               <div class="home_upper_profile col-5">
@@ -119,7 +123,7 @@
           </section>
           <!-- End Home Section -->
           <!-- ===== Profile Section ===== -->
-          <section class="profile">
+          <section id="profile" class="profile">
             <p class="d-flex justify-content-center">Profile</p>
 
             <p>
@@ -130,7 +134,7 @@
           </section>
           <!-- End Profile Section -->
           <!-- ===== Education Section ===== -->
-          <section class="education">
+          <section id="education" class="education">
             <p class="d-flex justify-content-center">Education</p>
 
             <div class="education__cards d-flex flex-column align-items-center">
@@ -153,7 +157,7 @@
           </section>
           <!-- End Education Section -->
           <!-- ===== Skills Section ===== -->
-          <section class="skills">
+          <section id="skills" class="skills">
             <p class="d-flex justify-content-center">Skills</p>
             <div class="skills__list row">
               <div class="skills__list__left col">
@@ -176,7 +180,7 @@
           </section>
           <!-- End Skills Section -->
           <!-- ===== Experience Section ===== -->
-          <section class="experience">
+          <section id="experience" class="experience">
             <p class="d-flex justify-content-center">Experience</p>
             <div
               class="experience__cards d-flex flex-column align-items-center"
@@ -202,7 +206,7 @@
           </section>
           <!-- End Experience Section -->
           <!-- ===== Certificates Section ===== -->
-          <section class="certificates">
+          <section id="certificates" class="certificates">
             <p class="d-flex justify-content-center">Certificates</p>
             <div class="certificate__card--web">
               <p>Lorem ipsum dolor sit amet.</p>
@@ -239,7 +243,7 @@
           </section>
           <!-- End Certificates Section -->
           <!-- ===== Reference Section ===== -->
-          <section class="references">
+          <section id="references" class="references">
             <div class="references__card--refererr-1">
               <p class="references__card__item--designation">Sr, Director</p>
               <p class="references__card__item--name">Mr. Clay Doe</p>
@@ -257,7 +261,7 @@
           <!-- End Reference Section -->
 
           <!-- ====== Languages Section ====== -->
-          <section class="languages">
+          <section id="languages" class="languages">
             <p class="d-flex justify-content-center">Languages</p>
             <ul class="languages__list d-flex justify-content-around">
               <li class="languages__list__item">English</li>
@@ -266,7 +270,7 @@
           </section>
           <!-- End Languages Section -->
           <!-- ====== Interests Section ====== -->
-          <section class="interests">
+          <section id="interests" class="interests">
             <p class="d-flex justify-content-center">Interests</p>
             <div class="row d-flex flex-wrap justify-content-between">
               <div class="col d-flex col-2 flex-column align-items-center">
@@ -322,51 +326,74 @@
 
             <div
               class="offcanvas offcanvas-bottom"
+              data-bs-backdrop="false"
               tabindex="-1"
               id="offcanvas"
-              aria-labelledby="offcanvasLabel"
             >
-              <div class="offcanvas-header"></div>
               <div class="offcanvas-body">
                 <div class="container">
                   <div class="row py-1">
-                    <div class="col-4 d-flex flex-column align-items-center">
+                    <a
+                      class="btn col-4 d-flex flex-column align-items-center"
+                      href="#home"
+                    >
                       <box-icon name="home"></box-icon>
+
                       <p>Home</p>
-                    </div>
-                    <div class="col-4 d-flex flex-column align-items-center">
+                    </a>
+
+                    <a
+                      class=" btn col-4 d-flex flex-column align-items-center"
+                      href="#profile"
+                    >
                       <box-icon name="user" color="#b2b2b2"></box-icon>
                       <p class="text-black-50">Profile</p>
-                    </div>
-                    <div class="col-4 d-flex flex-column align-items-center">
+                    </a>
+
+                    <a
+                      class=" btn col-4 d-flex flex-column align-items-center"
+                      href="#education"
+                    >
                       <box-icon name="book" color="#b2b2b2"></box-icon>
                       <p class="text-black-50">Education</p>
-                    </div>
+                    </a>
                   </div>
                   <div class="row py-1">
-                    <div class="col-4 d-flex flex-column align-items-center">
+                    <a
+                      class="btn col-4 d-flex flex-column align-items-center"
+                      href="#skills"
+                    >
                       <box-icon name="notepad" color="#b2b2b2"></box-icon>
                       <p class="text-black-50">Skills</p>
-                    </div>
-                    <div class="col-4 d-flex flex-column align-items-center">
+                    </a>
+                    <a
+                      class="btn col-4 d-flex flex-column align-items-center"
+                      href="#experience"
+                    >
                       <box-icon name="briefcase" color="#b2b2b2"></box-icon>
                       <p class="text-black-50">Experience</p>
-                    </div>
-                    <div class="col-4 d-flex flex-column align-items-center">
+                    </a>
+                    <a
+                      class="btn col-4 d-flex flex-column align-items-center"
+                      href="#certificates"
+                    >
                       <box-icon name="medal" color="#b2b2b2"></box-icon>
                       <p class="text-black-50">Certificates</p>
-                    </div>
+                    </a>
                   </div>
 
                   <div class="row py-1">
-                    <div class="col-4 d-flex flex-column align-items-center">
+                    <a
+                      class="btn col-4 d-flex flex-column align-items-center"
+                      href="#references"
+                    >
                       <box-icon
                         name="link-external"
                         color="#b2b2b2"
                         class="align-items-center"
                       ></box-icon>
                       <p class="align-items-center text-black-50">References</p>
-                    </div>
+                    </a>
                   </div>
                 </div>
               </div>
