--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
 
       <div class="container-fluid">
         <div class="row">
-          <div class="col-sm-12 col-md-12 col-lg-3">
+          <div class="col-sm-12 col-md-12 col-lg-3 
+          resume-left-section">
 
                       <!-- ===== Home section ===== -->
           <section id="home" class="home">
@@ -227,7 +228,7 @@
           <!-- End Skills Section -->
 
           </div>
-          <div class="col-sm-12 col-md-12 col-lg-8 ">
+          <div class="col-sm-12 col-md-12 col-lg-8 resume-right-section">
 
                <!-- ===== Experience Section ===== -->
           <section id="experience" class="experience">
